<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="btn_AC">AC</string>
    <string name="btn_left">\u2190</string>
    <string name="btn_right">\u2192</string>
    <string name="btn_left_paren">(</string>
    <string name="btn_right_paren">)</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_mul">\u00D7</string>
    <string name="btn_div">\u00F7</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_exp">x&lt;sup&gt;y&lt;/sup&gt;</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_plus">+</string>
    <string name="btn_ans">Ans</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_del">DEL</string>
    <string name="btn_equal">=</string>
</resources>
