<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:rowCount="6"
    app:columnCount="5"
    android:background="@color/keypad_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/display_bg"
        android:orientation="vertical"
        app:layout_rowWeight="1"
        app:layout_columnWeight="1"
        app:layout_columnSpan="5">
        <TextView
            android:id="@+id/eqt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/display_fg" />
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:text=""
            android:textSize="32sp"
            android:textColor="@color/display_fg" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_AC"
        style="@style/btn.general"
        android:text="@string/btn_AC" />

    <com.example.lcn.calc.NavButton
        android:id="@+id/btn_left"
        style="@style/btn.general"
        android:text="@string/btn_left" />

    <com.example.lcn.calc.NavButton
        android:id="@+id/btn_right"
        style="@style/btn.general"
        android:text="@string/btn_right" />

    <Button
        android:id="@+id/btn_del"
        style="@style/btn.general"
        android:text="@string/btn_del" />

    <Button
        android:id="@+id/btn_left_paren"
        style="@style/btn.op"
        android:text="@string/btn_left_paren"
        android:onClick="clickOp" />

    <Button
        android:id="@+id/btn_7"
        style="@style/btn.num"
        android:text="@string/btn_7"
        android:onClick="clickNum" />

    <Button
        android:id="@+id/btn_8"
        style="@style/btn.num"
        android:text="@string/btn_8"
        android:onClick="clickNum" />

    <Button
        android:id="@+id/btn_9"
        style="@style/btn.num"
        android:text="@string/btn_9"
        android:onClick="clickNum" />

    <Button
        android:id="@+id/btn_mul"
        style="@style/btn.op"
        android:text="@string/btn_mul"
        android:onClick="clickOp" />

    <Button
        android:id="@+id/btn_right_paren"
        style="@style/btn.op"
        android:text="@string/btn_right_paren"
        android:onClick="clickOp" />

    <Button
        android:id="@+id/btn_4"
        style="@style/btn.num"
        android:text="@string/btn_4"
        android:onClick="clickNum" />

    <Button
        android:id="@+id/btn_5"
        style="@style/btn.num"
        android:text="@string/btn_5"
        android:onClick="clickNum" />

    <Button
        android:id="@+id/btn_6"
        style="@style/btn.num"
        android:text="@string/btn_6"
        android:onClick="clickNum" />

    <Button
        android:id="@+id/btn_div"
        style="@style/btn.op"
        android:text="@string/btn_div"
        android:onClick="clickOp" />


    <Button
        android:id="@+id/btn_exp"
        style="@style/btn.op"
        android:text=""
        android:onClick="clickOp" />

    <Button
        android:id="@+id/btn_1"
        style="@style/btn.num"
        android:text="@string/btn_1"
        android:onClick="clickNum" />

    <Button
        android:id="@+id/btn_2"
        style="@style/btn.num"
        android:text="@string/btn_2"
        android:onClick="clickNum" />

    <Button
        android:id="@+id/btn_3"
        style="@style/btn.num"
        android:text="@string/btn_3"
        android:onClick="clickNum" />

    <Button
        android:id="@+id/btn_minus"
        style="@style/btn.op"
        android:text="@string/btn_minus"
        android:onClick="clickOp" />

    <Button
        android:id="@+id/btn_ans"
        style="@style/btn.op"
        android:text="@string/btn_ans"
        android:onClick="clickOp" />

    <Button
        android:id="@+id/btn_0"
        style="@style/btn.num"
        app:layout_columnSpan="2"
        android:text="@string/btn_0"
        android:onClick="clickNum" />

    <Button
        android:id="@+id/btn_dot"
        style="@style/btn.op"
        android:text="@string/btn_dot"
        android:onClick="clickOp" />

    <Button
        android:id="@+id/btn_plus"
        style="@style/btn.op"
        android:text="@string/btn_plus"
        android:onClick="clickOp" />

    <Button
        android:id="@+id/btn_equal"
        style="@style/btn.op"
        android:text="@string/btn_equal" />

</android.support.v7.widget.GridLayout>